--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script src = "linecharts.js" defer></script>
        
        
-        <link rel ="stylesheet" href ="linechart.css">
+        <link rel ="stylesheet" href ="CSS/linechart.css">
     </head>
 
     <body>
