--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Board Games Line Charts</title>
-        <script src="../lib/d3.v5.min.js"></script>
+        <script src="//d3js.org/d3.v5.js"></script>
        
         <script src = "JS/linecharts.js" defer></script>
        
